[Gallery page] fix aligning, add default photo

--- a/frontend/src/app/realty-obj-details/realty-obj-details.component.scss
+++ b/frontend/src/app/realty-obj-details/realty-obj-details.component.scss
@@ -9,16 +9,19 @@
 }
 
 .realty-obj-pic--main-container {
-  height: 500px;
+  height: 360px;
 }
 
 .realty-obj-pic--main {
+  object-fit: cover;
   width: 100%;
   max-height: 100%;
 }
 
 .realty-obj-interested-btn {
   text-transform: uppercase;
+  margin-right: 15px;
+  font-size: 1.2rem;
 }
 
 .realter-photo-container {
@@ -26,6 +29,41 @@
 }
 
 .realter-photo {
+  border-radius: 3px;
   max-width: 100%;
   max-height: 100%;
+}
+
+.main-info-block {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-bottom: 15px;
+}
+
+.photo-and-gallery-block {
+  display: flex;
+  flex-direction: column;
+}
+
+.list-group-item {
+  font-size: 1rem;
+}
+
+.description-block {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  text-overflow: ellipsis;
+
+  &--content {
+    max-height: 50px;
+  }
+
+  &--text {
+    font-size: 1rem;
+    max-height: 150px;
+    overflow: auto;
+  }
 }
