--- a/frontend/src/app/realty-obj-edit/realty-obj-edit.scss
+++ b/frontend/src/app/realty-obj-edit/realty-obj-edit.scss
@@ -13,3 +13,10 @@ input.ng-invalid, select.ng-invalid, textarea.ng-invalid {
 input.ng-valid, select.ng-valid, textarea.ng-valid {
   border: 1px solid green !important;
 }
+
+.action-buttons {
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
+  justify-content: end;
+}
