--- a/frontend/src/app/realty-objs-gallery/realty-objs-list.component.scss
+++ b/frontend/src/app/realty-objs-gallery/realty-objs-list.component.scss
@@ -19,3 +19,15 @@
   }
 }
 
+.description {
+  &-content--text {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-height: 1.5rem;
+    height: 3rem;
+    margin-bottom: 0.3rem;
+  }
+}
